--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capture",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ifedayoagboola.github.io/capture-react-app",
+  "homepage": "https://ifedayoagboola.github.io/capture-react-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
